--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [URL]
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Map.Map
+GameDefaultMap=/Game/Map.Map
 GlobalDefaultGameMode=/Game/Player/GameMode.GameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
